--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -493,7 +493,7 @@
    ],
    "source": [
     "print(\"2\"==2)\n",
-    "#por que no son igual tipo de datos debido a que uno es str y el otro int "
+    "#por que no son igual tipo de datos debido a que uno es str y el otro int ."
    ]
   },
   {
@@ -679,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
